--- a/GiftShop/GiftShop/Classes/Hot(热门)/View/GSHotCell.xib
+++ b/GiftShop/GiftShop/Classes/Hot(热门)/View/GSHotCell.xib
@@ -1,19 +1,82 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="GSHotCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="254" height="357"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="254" height="357"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NuP-5F-Jak">
+                        <rect key="frame" x="0.0" y="0.0" width="254" height="254"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="NuP-5F-Jak" secondAttribute="height" id="gO7-sW-nXh"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPQ-db-aOI">
+                        <rect key="frame" x="5" y="262" width="244" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="L7X-SY-9WM"/>
+                            <constraint firstAttribute="height" constant="21" id="U8Y-Kz-zf1"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="U8Y-Kz-zf1"/>
+                            </mask>
+                        </variation>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udn-H4-yvb">
+                        <rect key="frame" x="5" y="322" width="100" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="udn-H4-yvb" secondAttribute="height" multiplier="10:3" id="4pr-iE-hcx"/>
+                            <constraint firstAttribute="width" constant="100" id="sIJ-pq-1wD"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <color key="textColor" red="1" green="0.064554018520000006" blue="0.18918808270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vph-Gd-WZD">
+                        <rect key="frame" x="149" y="322" width="100" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="NuP-5F-Jak" secondAttribute="trailing" id="0Ov-eK-qEv"/>
+                <constraint firstAttribute="trailing" secondItem="MPQ-db-aOI" secondAttribute="trailing" constant="5" id="1jU-cW-dK6"/>
+                <constraint firstItem="Vph-Gd-WZD" firstAttribute="bottom" secondItem="udn-H4-yvb" secondAttribute="bottom" id="1ku-Wv-mcX"/>
+                <constraint firstAttribute="bottom" secondItem="udn-H4-yvb" secondAttribute="bottom" constant="5" id="1n2-Ij-Fe2"/>
+                <constraint firstItem="Vph-Gd-WZD" firstAttribute="width" secondItem="udn-H4-yvb" secondAttribute="width" id="3Rr-7j-KUy"/>
+                <constraint firstItem="Vph-Gd-WZD" firstAttribute="height" secondItem="udn-H4-yvb" secondAttribute="height" id="E6j-Nr-axG"/>
+                <constraint firstItem="NuP-5F-Jak" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NRj-2P-jbu"/>
+                <constraint firstItem="MPQ-db-aOI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="XZ4-Ka-PPR"/>
+                <constraint firstAttribute="trailing" secondItem="Vph-Gd-WZD" secondAttribute="trailing" constant="5" id="dhi-YN-sMu"/>
+                <constraint firstItem="Vph-Gd-WZD" firstAttribute="top" secondItem="udn-H4-yvb" secondAttribute="top" id="frq-DI-bXp"/>
+                <constraint firstItem="udn-H4-yvb" firstAttribute="top" secondItem="MPQ-db-aOI" secondAttribute="bottom" constant="10" id="gxP-B9-LYh"/>
+                <constraint firstItem="NuP-5F-Jak" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="pD1-Za-5PN"/>
+                <constraint firstItem="MPQ-db-aOI" firstAttribute="top" secondItem="NuP-5F-Jak" secondAttribute="bottom" constant="8" id="pzl-sf-QyZ"/>
+                <constraint firstItem="udn-H4-yvb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="r4M-5Q-ySr"/>
+            </constraints>
+            <size key="customSize" width="254" height="357"/>
+            <connections>
+                <outlet property="favoriteLabel" destination="Vph-Gd-WZD" id="BRS-s1-gL2"/>
+                <outlet property="photoImage" destination="NuP-5F-Jak" id="Nou-iD-Vsl"/>
+                <outlet property="priceLabel" destination="udn-H4-yvb" id="fZb-Fh-Ivj"/>
+                <outlet property="titleLabel" destination="MPQ-db-aOI" id="hTq-l5-DG8"/>
+            </connections>
+            <point key="canvasLocation" x="345" y="387.5"/>
         </collectionViewCell>
     </objects>
 </document>
