--- a/GiftShop/GiftShop/Classes/GiftShop(礼品)/View/GSFirst.xib
+++ b/GiftShop/GiftShop/Classes/GiftShop(礼品)/View/GSFirst.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,15 +11,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ay6-kd-Ux0">
-                    <rect key="frame" x="13" y="13" width="173" height="178"/>
+                    <rect key="frame" x="5" y="5" width="189" height="194"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottomMargin" secondItem="Ay6-kd-Ux0" secondAttribute="bottom" constant="5" id="MVi-ZB-YZH"/>
-                <constraint firstItem="Ay6-kd-Ux0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="5" id="Tpu-7W-y8h"/>
-                <constraint firstItem="Ay6-kd-Ux0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" constant="5" id="Zfq-WF-4OD"/>
-                <constraint firstAttribute="trailingMargin" secondItem="Ay6-kd-Ux0" secondAttribute="trailing" constant="5" id="r1X-Qk-xN4"/>
+                <constraint firstAttribute="bottom" secondItem="Ay6-kd-Ux0" secondAttribute="bottom" constant="5" id="18u-0Z-mlM"/>
+                <constraint firstItem="Ay6-kd-Ux0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="CVW-Ih-n4J"/>
+                <constraint firstItem="Ay6-kd-Ux0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="s9F-et-U5i"/>
+                <constraint firstAttribute="trailing" secondItem="Ay6-kd-Ux0" secondAttribute="trailing" constant="5" id="sDh-mf-yrm"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
