--- a/GiftShop/GiftShop/Classes/Hot(热门)/View/GSHotCell.xib
+++ b/GiftShop/GiftShop/Classes/Hot(热门)/View/GSHotCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -19,7 +19,14 @@
                             <constraint firstAttribute="width" secondItem="NuP-5F-Jak" secondAttribute="height" id="gO7-sW-nXh"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPQ-db-aOI">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCU-L2-pDO" userLabel="背景">
+                        <rect key="frame" x="0.0" y="254" width="254" height="103"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPQ-db-aOI">
                         <rect key="frame" x="5" y="262" width="244" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="L7X-SY-9WM"/>
@@ -54,6 +61,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
+                <constraint firstItem="LCU-L2-pDO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="09a-bf-huU"/>
                 <constraint firstAttribute="trailing" secondItem="NuP-5F-Jak" secondAttribute="trailing" id="0Ov-eK-qEv"/>
                 <constraint firstAttribute="trailing" secondItem="MPQ-db-aOI" secondAttribute="trailing" constant="5" id="1jU-cW-dK6"/>
                 <constraint firstItem="Vph-Gd-WZD" firstAttribute="bottom" secondItem="udn-H4-yvb" secondAttribute="bottom" id="1ku-Wv-mcX"/>
@@ -61,13 +69,16 @@
                 <constraint firstItem="Vph-Gd-WZD" firstAttribute="width" secondItem="udn-H4-yvb" secondAttribute="width" id="3Rr-7j-KUy"/>
                 <constraint firstItem="Vph-Gd-WZD" firstAttribute="height" secondItem="udn-H4-yvb" secondAttribute="height" id="E6j-Nr-axG"/>
                 <constraint firstItem="NuP-5F-Jak" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NRj-2P-jbu"/>
+                <constraint firstItem="LCU-L2-pDO" firstAttribute="top" secondItem="NuP-5F-Jak" secondAttribute="bottom" id="SPv-Wk-xKl"/>
                 <constraint firstItem="MPQ-db-aOI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="XZ4-Ka-PPR"/>
                 <constraint firstAttribute="trailing" secondItem="Vph-Gd-WZD" secondAttribute="trailing" constant="5" id="dhi-YN-sMu"/>
                 <constraint firstItem="Vph-Gd-WZD" firstAttribute="top" secondItem="udn-H4-yvb" secondAttribute="top" id="frq-DI-bXp"/>
                 <constraint firstItem="udn-H4-yvb" firstAttribute="top" secondItem="MPQ-db-aOI" secondAttribute="bottom" constant="10" id="gxP-B9-LYh"/>
+                <constraint firstAttribute="bottom" secondItem="LCU-L2-pDO" secondAttribute="bottom" id="osM-fb-4OR"/>
                 <constraint firstItem="NuP-5F-Jak" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="pD1-Za-5PN"/>
                 <constraint firstItem="MPQ-db-aOI" firstAttribute="top" secondItem="NuP-5F-Jak" secondAttribute="bottom" constant="8" id="pzl-sf-QyZ"/>
                 <constraint firstItem="udn-H4-yvb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="r4M-5Q-ySr"/>
+                <constraint firstAttribute="trailing" secondItem="LCU-L2-pDO" secondAttribute="trailing" id="sgn-F1-vYr"/>
             </constraints>
             <size key="customSize" width="254" height="357"/>
             <connections>
@@ -76,7 +87,7 @@
                 <outlet property="priceLabel" destination="udn-H4-yvb" id="fZb-Fh-Ivj"/>
                 <outlet property="titleLabel" destination="MPQ-db-aOI" id="hTq-l5-DG8"/>
             </connections>
-            <point key="canvasLocation" x="345" y="387.5"/>
+            <point key="canvasLocation" x="233" y="319.5"/>
         </collectionViewCell>
     </objects>
 </document>
